--- a/.github/workflows/codeQL.yml
+++ b/.github/workflows/codeQL.yml
@@ -20,9 +20,10 @@ jobs:
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v1
-        matrix:
-          language:['javascript','python']
+        with:
+          languages: csharp
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v1
+        
         
